# zeek-dgaintel

./: .coveragerc  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  dgaintel.example.zeek  docker-entrypoint.sh  local.env  pyproject.toml
tests/: test_config.py  test_processor.py  test_sinks.py  test_source.py  test_zeek.py
zeek_dgaintel/: __main__.py  config.py  processor.py  service.py  sinks.py  source.py  zeek.py
