[tool.poetry]
name = "zeek-dgaintel"
version = "0.1.0"
description = "A Zeek Broker client for real-time DGA detection using a CNN-LSTM neural network"
authors = ["smolse"]
packages = [{include = "zeek_dgaintel"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fire = "^0.5.0"
numpy = "1.23.5"
scipy = "1.9.3"
tensorflow-cpu = "2.12.0"
dgaintel = "^2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.2"
pylint = "^2.17.4"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
